Fix: variables name in playbooks/docker/rollback.yaml file

--- a/playbooks/docker/rollback.yaml
+++ b/playbooks/docker/rollback.yaml
@@ -20,8 +20,8 @@
     # Remove Docker Gpg key
     - {
       role: ../../rollbacks/apt/keys,
-        aptKeyUri: "{{ dockerKeyUri }}",
-        aptKeyId: "{{ dockerKeyId }}"
+        aptKeyUri: "{{ dockerAptKeyUri }}",
+        aptKeyId: "{{ dockerAptKeyId }}"
     }
 
     # Remove admin user from Docker group
