--- a/projects/reactapp1/rollback.yaml
+++ b/projects/reactapp1/rollback.yaml
@@ -2,7 +2,7 @@
 
 ---
 
-- hosts: lenny
+- hosts: docker
   vars:
     reactapp1ContainerName: reactapp1
     reactapp1ImageName: tuximetal/reactapp1
