Update dockerServices roles; change the restart_policy to always

--- a/roles/dockerServices/letsencrypt/tasks/main.yaml
+++ b/roles/dockerServices/letsencrypt/tasks/main.yaml
@@ -12,6 +12,7 @@
     name: nginx-letsencrypt
     image: "{{ letsencryptImage }}"
     state: started
+    restart_policy: always
     volumes_from: "{{ nginxProxyContainer }}"
     volumes: "{{ letsencryptVolumes }}"
   tags: [dockerServices, runContainer, letsencrypt]
