Update defaults main variables for fail2ban docker service; change smtp host variable

--- a/roles/dockerServices/fail2ban/defaults/main.yaml
+++ b/roles/dockerServices/fail2ban/defaults/main.yaml
@@ -33,7 +33,7 @@ fail2banContainers: [
     containerName: "{{ fail2banTypeContainer.host }}",
     containerEnvVars: {
       TZ: "Europe/Paris",
-      SSMTP_HOST: "smtp.gmail.com",
+      SSMTP_HOST: "mail.infomaniak.com",
       SSMTP_PORT: "587",
       SSMTP_USER: "{{ eximAccountEmail }}",
       SSMTP_PASSWORD: "{{ eximAccountPassword }}",
@@ -51,7 +51,7 @@ fail2banContainers: [
     containerName: "{{ fail2banTypeContainer.docker }}",
     containerEnvVars: {
       TZ: "Europe/Paris",
-      SSMTP_HOST: "smtp.gmail.com",
+      SSMTP_HOST: "mail.infomaniak.com",
       SSMTP_PORT: "587",
       SSMTP_USER: "{{ eximAccountEmail }}",
       SSMTP_PASSWORD: "{{ eximAccountPassword }}",
