Updating main.yaml in apt install roles; fix: warning from apt loop

--- a/roles/apt/install/tasks/main.yaml
+++ b/roles/apt/install/tasks/main.yaml
@@ -4,8 +4,7 @@
 
 - name: APT INSTALL | Install packages
   apt:
-    name: "{{ item }}"
+    name: "{{ aptPackages }}"
     update_cache: yes
     state: latest
-  with_items: "{{ aptPackages }}"
   tags: [apt, apt-install]
