--- a/roles/docker/image/tasks/main.yaml
+++ b/roles/docker/image/tasks/main.yaml
@@ -5,4 +5,5 @@
 - name: DOCKER IMAGE PULL | Pull {{ projectAppImageName }} image
   docker_image:
     name: "{{ projectAppImageName }}"
+    source: pull
   tags: [docker, pullImage]
