Updating main.yaml file in docker services fail2ban task role; fix: warning from docker image, source must be specified

--- a/roles/dockerServices/fail2ban/tasks/main.yaml
+++ b/roles/dockerServices/fail2ban/tasks/main.yaml
@@ -28,6 +28,7 @@
 - name: DOCKER SERVICES FAIL2BAN | Pull fail2ban image
   docker_image:
     name: "{{ fail2banImage }}"
+    source: pull
   tags: [dockerServices, pullImage, fail2ban]
 
 - name: DOCKER SERVICES FAIL2BAN | Run the fail2ban container
