Updating main.yaml file in docker services letsencrypt task role; fix: warning from docker image, source must be specified

--- a/roles/dockerServices/letsencrypt/tasks/main.yaml
+++ b/roles/dockerServices/letsencrypt/tasks/main.yaml
@@ -5,6 +5,7 @@
 - name: DOCKER SERVICES LETSENCRYPT | Pull letsencrypt-companion image
   docker_image:
     name: "{{ letsencryptImage }}"
+    source: pull
   tags: [dockerServices, pullImage, letsencrypt]
 
 - name: DOCKER SERVICES LETSENCRYPT | Run the letsencrypt-companion container
