Updating main.yaml file in docker services mongo task role; fix: warning from docker image, source must be specified

--- a/roles/dockerServices/mongo/tasks/main.yaml
+++ b/roles/dockerServices/mongo/tasks/main.yaml
@@ -5,6 +5,7 @@
 - name: DOCKER SERVICES MONGO | Pull mongo image
   docker_image:
     name: "{{ mongoImage }}"
+    source: pull
   tags: [dockerServices, pullImage, mongodb]
 
 - name: DOCKER SERVICES MONGO | Run the mongodb container
