Updating main.yaml file in docker services nginx-proxy task role; fix: warning from docker image, source must be specified

--- a/roles/dockerServices/nginx-proxy/tasks/main.yaml
+++ b/roles/dockerServices/nginx-proxy/tasks/main.yaml
@@ -5,6 +5,7 @@
 - name: DOCKER SERVICES NGINX PROXY | Pull nginx-proxy image
   docker_image:
     name: "{{ nginxProxyImage }}"
+    source: pull
   tags: [dockerServices, pullImage, nginxProxy]
 
 - name: DOCKER SERVICES NGINX PROXY | Run the nginx-proxy container
