Updating main.yaml file in docker image task rollbacks; fix: warning on docker image, use force_absent instead of rm and force

--- a/rollbacks/docker/image/tasks/main.yaml
+++ b/rollbacks/docker/image/tasks/main.yaml
@@ -6,6 +6,5 @@
   docker_image:
     name: "{{ projectAppImageName }}"
     state: absent
-    rm: yes
-    force: yes
+    force_absent: yes
   tags: [rollback, docker, removeImage]
