Updating main.yaml files in tasks folder for all docker related roles; adds community.docker prefix to the docker_* commands and adds the container default behavior to clear out the deprecated warnings

--- a/roles/docker/image/tasks/main.yaml
+++ b/roles/docker/image/tasks/main.yaml
@@ -3,7 +3,7 @@
 ---
 
 - name: DOCKER IMAGE PULL | Pull {{ projectAppImageName }} image
-  docker_image:
+  community.docker.docker_image:
     name: "{{ projectAppImageName }}"
     source: pull
   tags: [docker, pullImage]
