--- a/roles/dockerServices/letsencrypt/tasks/main.yaml
+++ b/roles/dockerServices/letsencrypt/tasks/main.yaml
@@ -3,16 +3,17 @@
 ---
 
 - name: DOCKER SERVICES LETSENCRYPT | Pull letsencrypt-companion image
-  docker_image:
+  community.docker.docker_image:
     name: "{{ letsencryptImage }}"
     source: pull
   tags: [dockerServices, pullImage, letsencrypt]
 
 - name: DOCKER SERVICES LETSENCRYPT | Run the letsencrypt-companion container
-  docker_container:
+  community.docker.docker_container:
     name: nginx-letsencrypt
     image: "{{ letsencryptImage }}"
     state: started
+    container_default_behavior: compatibility
     restart_policy: always
     volumes_from: "{{ nginxProxyContainer }}"
     volumes: "{{ letsencryptVolumes }}"
