--- a/roles/docker/container/tasks/main.yaml
+++ b/roles/docker/container/tasks/main.yaml
@@ -1,10 +1,11 @@
 # ansible_path/roles/docker/container/tasks/main.yaml
 ---
 - name: DOCKER CONTAINER RUN | Run {{ projectAppContainerName }} container
-  docker_container:
+  community.docker.docker_container:
     name: '{{ projectAppContainerName }}'
     image: '{{ projectAppImageName }}'
     state: started
+    container_default_behavior: compatibility
     restart_policy: always
     volumes: '{{ projectAppVolumes }}'
     links: '{{ projectAppLinks }}'
