--- a/roles/dockerServices/nginx-proxy/tasks/main.yaml
+++ b/roles/dockerServices/nginx-proxy/tasks/main.yaml
@@ -3,16 +3,17 @@
 ---
 
 - name: DOCKER SERVICES NGINX PROXY | Pull nginx-proxy image
-  docker_image:
+  community.docker.docker_image:
     name: "{{ nginxProxyImage }}"
     source: pull
   tags: [dockerServices, pullImage, nginxProxy]
 
 - name: DOCKER SERVICES NGINX PROXY | Run the nginx-proxy container
-  docker_container:
+  community.docker.docker_container:
     name: nginx-proxy
     image: "{{ nginxProxyImage }}"
     state: started
+    container_default_behavior: compatibility
     restart_policy: always
     ports:
       - "80:80"
