Updating main.yaml files in tasks folder for all docker related rollbacks roles; adds community.docker prefix to the docker_* commands and adds the container default behavior to clear out the deprecated warnings

--- a/rollbacks/docker/container/tasks/main.yaml
+++ b/rollbacks/docker/container/tasks/main.yaml
@@ -3,8 +3,9 @@
 ---
 
 - name: ROLLBACK DOCKER CONTAINER | Stop the {{ projectAppContainerName }} container
-  docker_container:
+  community.docker.docker_container:
     name: "{{ projectAppContainerName }}"
     state: absent
+    container_default_behavior: compatibility
     purge_networks: yes
   tags: [rollback, docker, stopContainer]
