--- a/rollbacks/dockerServices/nginx-proxy/tasks/main.yaml
+++ b/rollbacks/dockerServices/nginx-proxy/tasks/main.yaml
@@ -3,14 +3,15 @@
 ---
 
 - name: ROLLBACK DOCKER SERVICES NGINX PROXY | Stop the nginx-proxy container
-  docker_container:
+  community.docker.docker_container:
     name: "{{ nginxProxyContainerName }}"
     state: absent
+    container_default_behavior: compatibility
     purge_networks: yes
   tags: [rollback, dockerServices, stopContainer, nginxProxy]
 
 - name: ROLLBACK DOCKER SERVICES NGINX PROXY | Remove nginx-proxy image
-  docker_image:
+  community.docker.docker_image:
     name: "{{ nginxProxyImage }}"
     state: absent
     rm: yes
