--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,3 +3,4 @@ interpreter_python = auto_silent
 inventory = hosts.yaml
 vault_password_file = .vault
 retry_files_enabled = False
+ansible_python_interpreter = /usr/bin/python3
