--- a/host_vars/lisa/lisa.yaml
+++ b/host_vars/lisa/lisa.yaml
@@ -1,12 +1,10 @@
 # ansible_path/host_vars/lisa/lisa.yaml
 
-rootUserPassword:
-  "{{ vaultRootUserPassword | password_hash('sha512', vaultHashSalt) }}"
+rootUserPassword: "{{ vaultRootUserPassword | password_hash('sha512', vaultHashSalt) }}"
 
 sshAdminUserName: '{{ vaultSshAdminUserName }}'
 sshAdminUserGroup: '{{ vaultSshAdminUserGroup }}'
-sshAdminUserPassword:
-  "{{ vaultSshAdminUserPassword | password_hash('sha512', vaultHashSalt) }}"
+sshAdminUserPassword: "{{ vaultSshAdminUserPassword | password_hash('sha512', vaultHashSalt) }}"
 sshAdminUserCreateHome: yes
 sshAdminUserShell: /bin/bash
 
@@ -15,5 +13,3 @@ eximAccountPassword: '{{ vaultEximAccountPassword }}'
 
 mongodbAdminUsername: '{{ vaultMongodbAdminUsername }}'
 mongodbAdminPassword: '{{ vaultMongodbAdminPassword }}'
-
-ansible_python_interpreter: /usr/bin/python
