Updating docker.yaml file in group_vars; removes the dockerDepsPackages variable, update dockerPackages variable and uses single quotes

--- a/group_vars/docker.yaml
+++ b/group_vars/docker.yaml
@@ -1,12 +1,12 @@
 # ansible_path/group_vars/docker.yaml
 
 # Docker installation
-dockerAptRepoUri: "https://raw.githubusercontent.com/TituxMetal/cffa/master/apt/docker.list"
+dockerAptRepoUri: 'https://raw.githubusercontent.com/TituxMetal/cffa/main/apt/docker.list'
 dockerAptRepoName: docker
-dockerDepsPackages: [ "software-properties-common", "python-docker" ]
-dockerPackage: [ "docker-ce" ]
+dockerPackages:
+  ['docker-ce', 'docker-ce-cli', 'containerd.io', 'docker-compose-plugin', 'python3-docker']
 dockerAptKeyUri: https://download.docker.com/linux/debian/gpg
 dockerAptKeyId: 9DC858229FC7DD38854AE2D88D81803C0EBFCD88
 
 # Docker service Fail2ban
-dockerServiceFail2banDestNotifEmail: "{{ vaultDockerServiceFail2banDestNotifEmail }}"
+dockerServiceFail2banDestNotifEmail: '{{ vaultDockerServiceFail2banDestNotifEmail }}'
