Updating apt install main task role file; uses single quotes

--- a/roles/apt/install/tasks/main.yaml
+++ b/roles/apt/install/tasks/main.yaml
@@ -1,10 +1,8 @@
 # ansible_path/roles/apt/install/tasks/main.yaml
-
 ---
-
 - name: APT INSTALL | Install packages
   apt:
-    name: "{{ aptPackages }}"
+    name: '{{ aptPackages }}'
     update_cache: yes
     state: latest
   tags: [apt, apt-install]
