--- a/roles/apt/repository/tasks/main.yaml
+++ b/roles/apt/repository/tasks/main.yaml
@@ -1,18 +1,16 @@
 # ansible_path/roles/apt/repository/tasks/main.yaml
-
 ---
-
 - name: APT REPOSITORY | Check if there is a backup file for default sources.list file
   stat:
-    path: "/etc/apt/{{ aptRepoName }}.list.backup"
+    path: '/etc/apt/{{ aptRepoName }}.list.backup'
   register: fileExists
   when: aptRepoName == "sources"
   tags: [apt, apt-repository, backup-default]
 
 - name: APT REPOSITORY | Copy the default {{ aptRepoName }}.list in a backup file
   copy:
-    src: "/etc/apt/{{ aptRepoName }}.list"
-    dest: "/etc/apt/{{ aptRepoName }}.list.backup"
+    src: '/etc/apt/{{ aptRepoName }}.list'
+    dest: '/etc/apt/{{ aptRepoName }}.list.backup'
     remote_src: yes
   register: isCopyed
   when: aptRepoName == "sources" and fileExists is defined and fileExists.stat.exists == False
@@ -20,15 +18,15 @@
 
 - name: APT REPOSITORY | Remove the default sources.list file
   file:
-    path: "/etc/apt/{{ aptRepoName }}.list"
+    path: '/etc/apt/{{ aptRepoName }}.list'
     state: absent
-  when: isCopyed is success
+  when: aptRepoName == "sources" and isCopyed is success
   tags: [apt, apt-repository, remove-default]
 
 - name: APT REPOSITORY | Add {{ aptRepoName }} apt repository file
   get_url:
-    url: "{{ aptRepoUrl }}"
-    dest: "/etc/apt/sources.list.d/{{ aptRepoName }}.list"
+    url: '{{ aptRepoUrl }}'
+    dest: '/etc/apt/sources.list.d/{{ aptRepoName }}.list'
     group: root
     owner: root
     backup: yes
