--- a/roles/dockerServices/letsencrypt/tasks/main.yaml
+++ b/roles/dockerServices/letsencrypt/tasks/main.yaml
@@ -1,20 +1,21 @@
 # ansible_path/roles/dockerServices/letsencrypt/tasks/main.yaml
-
 ---
-
 - name: DOCKER SERVICES LETSENCRYPT | Pull letsencrypt-companion image
   community.docker.docker_image:
-    name: "{{ letsencryptImage }}"
+    name: '{{ letsencryptImage }}'
     source: pull
   tags: [dockerServices, pullImage, letsencrypt]
 
 - name: DOCKER SERVICES LETSENCRYPT | Run the letsencrypt-companion container
   community.docker.docker_container:
     name: nginx-letsencrypt
-    image: "{{ letsencryptImage }}"
+    image: '{{ letsencryptImage }}'
     state: started
     container_default_behavior: compatibility
     restart_policy: always
-    volumes_from: "{{ nginxProxyContainer }}"
-    volumes: "{{ letsencryptVolumes }}"
+    networks:
+      - name: '{{ nginxProxyNetworkName }}'
+    env: '{{ letsencryptEnvVars }}'
+    volumes_from: '{{ nginxProxyContainer }}'
+    volumes: '{{ letsencryptVolumes }}'
   tags: [dockerServices, runContainer, letsencrypt]
