--- a/roles/dockerServices/nginx-proxy/tasks/main.yaml
+++ b/roles/dockerServices/nginx-proxy/tasks/main.yaml
@@ -1,23 +1,21 @@
 # ansible_path/roles/dockerServices/nginx-proxy/tasks/main.yaml
-
 ---
-
 - name: DOCKER SERVICES NGINX PROXY | Pull nginx-proxy image
   community.docker.docker_image:
-    name: "{{ nginxProxyImage }}"
+    name: '{{ nginxProxyImage }}'
     source: pull
   tags: [dockerServices, pullImage, nginxProxy]
 
 - name: DOCKER SERVICES NGINX PROXY | Run the nginx-proxy container
   community.docker.docker_container:
     name: nginx-proxy
-    image: "{{ nginxProxyImage }}"
+    image: '{{ nginxProxyImage }}'
     state: started
-    container_default_behavior: compatibility
     restart_policy: always
+    networks:
+      - name: '{{ nginxProxyNetworkName }}'
     ports:
-      - "80:80"
-      - "443:443"
-    volumes: "{{ nginxProxyVolumes }}"
-    labels: "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy=true"
+      - '80:80'
+      - '443:443'
+    volumes: '{{ nginxProxyVolumes }}'
   tags: [dockerServices, runContainer, nginxProxy]
