--- a/rollbacks/apt/remove/defaults/main.yaml
+++ b/rollbacks/apt/remove/defaults/main.yaml
@@ -1,3 +1,3 @@
 # ansible_path/rollbacks/apt/remove/defaults/main.yaml
 
-aptPackages: [ "curl", "wget", "tree", "htop", "rsync", "dbus", "zip", "unzip" ]
+aptPackages: ['curl', 'wget', 'tree', 'htop', 'rsync', 'dbus', 'zip', 'unzip']
