--- a/rollbacks/apt/remove/tasks/main.yaml
+++ b/rollbacks/apt/remove/tasks/main.yaml
@@ -1,14 +1,11 @@
 # ansible_path/rollbacks/apt/remove/tasks/main.yaml
-
 ---
-
 - name: ROLLBACK APT INSTALL | Remove and purge packages
   apt:
-    name: "{{ item }}"
+    name: '{{ item }}'
     state: absent
-    update_cache: yes
     autoclean: yes
     autoremove: yes
     purge: yes
-  with_items: "{{ aptPackages }}"
+  with_items: '{{ aptPackages }}'
   tags: [rollback, apt, apt-remove, purge-packages]
