--- a/rollbacks/dockerServices/nginx-proxy/tasks/main.yaml
+++ b/rollbacks/dockerServices/nginx-proxy/tasks/main.yaml
@@ -1,10 +1,8 @@
 # ansible_path/rollbacks/dockerServices/nginx-proxy/tasks/main.yaml
-
 ---
-
 - name: ROLLBACK DOCKER SERVICES NGINX PROXY | Stop the nginx-proxy container
   community.docker.docker_container:
-    name: "{{ nginxProxyContainerName }}"
+    name: '{{ nginxProxyContainerName }}'
     state: absent
     container_default_behavior: compatibility
     purge_networks: yes
@@ -12,8 +10,7 @@
 
 - name: ROLLBACK DOCKER SERVICES NGINX PROXY | Remove nginx-proxy image
   community.docker.docker_image:
-    name: "{{ nginxProxyImage }}"
+    name: '{{ nginxProxyImage }}'
     state: absent
-    rm: yes
-    force: yes
+    force_absent: yes
   tags: [rollback, dockerServices, removeImage, nginxProxy]
