--- a/playbooks/webserver/rollback.yaml
+++ b/playbooks/webserver/rollback.yaml
@@ -1,8 +1,8 @@
 # ansible_path/playbooks/webserver/rollback.yaml
-
 ---
-
 - hosts: docker
+  vars:
+    dockerNetworkName: 'nginx-proxy'
   roles:
     # Stop and clean nginx-proxy docker container
     - ../../rollbacks/dockerServices/fail2ban
@@ -12,6 +12,9 @@
 
     # Stop and clean letsencrypt docker container
     - ../../rollbacks/dockerServices/letsencrypt
+
+    # Delete nginx-proxy docker network
+    - { role: ../../rollbacks/docker/network, projectAppNetworkName: '{{ dockerNetworkName }}' }
 
     # Stop and clean mongodb docker container
     - ../../rollbacks/dockerServices/mongo
