Updating ansible.cfg file; adds some optimizations for speed

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,3 +4,8 @@ inventory = hosts.yaml
 vault_password_file = .vault
 retry_files_enabled = False
 ansible_python_interpreter = /usr/bin/python3
+callbacks_enabled = timer, profile_tasks, profile_roles
+forks = 20
+
+[ssh_connection]
+ssh_args = -C -o ControlMaster=auto -o ControlPersist=120s
